# building-libc

./: .gitignore  meson.build  meson_options.txt  test_results.xml
src/: meson.build
subprojects/: cmocka.wrap  openlibm.wrap  printf.wrap
test/: meson.build
test/string/: memcpy.c  memset.c  strstr.c
tools/: clean-xml-tests.sh  libc_tests_xml.sh  run_with_env.sh
